<resources>
    <string name="app_name">Диктофон</string>

    <string name="record_start">Запис</string>
    <string name="record_stop">Стоп</string>
    <string name="play_start">Відтворити</string>
    <string name="play_stop">Зупинити</string>
    <string name="open_settings">Налаштування</string>

    <string name="toast_recording_started">Запис розпочато</string>
    <string name="toast_recording_saved">Запис збережено</string>
    <string name="toast_playing">Відтворення…</string>
    <string name="toast_playback_stopped">Відтворення зупинено</string>

    <string name="pref_group_limits">Обмеження</string>
    <string name="pref_max_minutes">Макс. тривалість запису (хв)</string>
    <string name="pref_max_minutes_hint">Введіть тривалість…</string>
    <string name="pref_group_storage">Зберігання</string>
    <string name="pref_choose_folder">Папка збереження (SAF)</string>
    <string name="pref_choose_folder_summary">Обрати директорію для .m4a</string>

    <string name="play">Відтворити</string>
    <string name="pause">Пауза</string>
    <string name="stop_playback">Зупинити</string>
</resources>
